[package]
name = "scheduler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

[dependencies.sqlx]
version = "0.8"
optional = true
features = ["runtime-tokio", "chrono", "json", "uuid"]

[dependencies.redis]
version = "0.27"
optional = true
features = ["tokio-comp", "connection-manager"]

[dependencies.chrono-tz]
version = "0.10"
optional = true

[dependencies.axum]
version = "0.7"
optional = true
features = ["json"]

[dependencies.reqwest]
version = "0.12"
optional = true
features = ["json"]

[dependencies.tonic]
version = "0.12"
optional = true

[dependencies.prost]
version = "0.13"
optional = true

[dependencies.lapin]
version = "2"
optional = true

[dependencies.futures-lite]
version = "2"
optional = true

[build-dependencies]
tonic-build = { version = "0.12", optional = true, features = ["prost"] }
protox = { version = "0.7", optional = true }

[features]
default = []
sqlx-sqlite = ["dep:sqlx", "sqlx/sqlite"]
sqlx-mysql = ["dep:sqlx", "sqlx/mysql"]
sqlx-postgres = ["dep:sqlx", "sqlx/postgres"]
redis-store = ["dep:redis"]
timezone = ["dep:chrono-tz"]
api = ["dep:axum"]
remote = []
remote-http = ["dep:reqwest", "dep:axum", "remote"]
remote-grpc = ["dep:tonic", "dep:prost", "dep:tonic-build", "dep:protox", "remote"]
remote-rabbitmq = ["dep:lapin", "dep:futures-lite", "remote"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
portpicker = "0.1"
